food popup alert

--- a/admin/food/issuedPlateReport.html
+++ b/admin/food/issuedPlateReport.html
@@ -40,7 +40,7 @@
           <div class="inner-padding">
 
             <div class="frm-head">
-              <h1>Issued Food Plate Report</h1>
+              <h1 id="reportTitle">Issued Food Plate Report</h1>
             </div>
 
             <div id="alert" class="alert" role="alert" style="display: none;"></div>
