admin popup alert msg

--- a/admin/adminhome.html
+++ b/admin/adminhome.html
@@ -41,6 +41,7 @@
             </div>
             <div class="admin-menu">
               <div class="menu-grid">
+                <a class="menu-btn" href="account/index.html">Account Management</a>
                 <a class="menu-btn" href="sudo/index.html">Admin Management</a>
                 <a class="menu-btn" href="card/index.html">Card Management</a>
                 <a class="menu-btn" href="food/index.html">Food Management</a>
