--- a/admin/food/issuePlate.html
+++ b/admin/food/issuePlate.html
@@ -9,8 +9,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
     <!-- Scripts -->
-    <!-- <script src="../../style/js/config.js"></script>
-    <script src="../../style/js/header.js"></script> -->
     <script src="../../style/js/plugin.js"></script>
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
@@ -20,6 +18,21 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="../../style/css/styles.css" />
+    <style>
+      .big-alert {
+        font-size: 28px;
+        font-weight: bold;
+        text-align: center;
+        padding: 20px;
+        margin-top: 20px;
+      }
+      .alert-success {
+        color: green;
+      }
+      .alert-danger {
+        color: red;
+      }
+    </style>
   </head>
 
   <body>
@@ -37,24 +50,33 @@
       <div class="container">
         <div class="whitesec">
           <div class="inner-padding">
-
             <div class="frm-head">
               <h1>Tap your card for food check-in</h1>
             </div>
 
-            <div class="form">
-              <div id="alert" class="alert" role="alert" style="display: none;"></div>
-              <form id="foodCheckinForm">
-                <div class="form-group">
-                  <label for="cardno">Tap your card:</label>
-                  <input type="text" class="form-control" id="cardno" name="cardno" required />
-                </div>
+            <!-- Alert shown full screen after form -->
+            <div id="alert" class="big-alert" style="display: none;"></div>
 
-                <div class="form-group form-submit">
-                  <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
-              </form>
+            <!-- Form wrapper for easy hiding -->
+            <div id="formWrapper">
+              <div class="form">
+                <form id="foodCheckinForm">
+                  <div class="form-group">
+                    <label for="cardno">Tap your card:</label>
+                    <input type="text" class="form-control" id="cardno" name="cardno" required />
+                  </div>
+
+                  <div class="form-group form-submit">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                  </div>
+                </form>
+              </div>
             </div>
+
+            <!-- Error sound -->
+            <audio id="errorSound">
+              <source src="/assets/sound/alert.mp3" type="audio/mp3" />
+            </audio>
 
           </div>
         </div>
