room popup alert

--- a/admin/food/issuedPlateReport.html
+++ b/admin/food/issuedPlateReport.html
@@ -17,7 +17,7 @@
     <script src="../../style/js/custom.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="issuedPlateReport.js"></script>
-    <script src="issuePlate.js"></script>
+    <script src="issuedPlateReport.js"></script>
 
     <!-- Styles -->
     <link rel="stylesheet" href="../../style/css/styles.css" />
