--- a/admin/room/index.html
+++ b/admin/room/index.html
@@ -44,8 +44,8 @@
               <div class="menu-grid">
                 <a class="menu-btn" href="roomBooking.html">New Room Booking</a>
                 <a class="menu-btn" href="flatBooking.html">New Flat Booking</a>
-                <a class="menu-btn" href="fetchRoomBookingsByCard.html">Fetch Room Bookings By Card</a>
-                <a class="menu-btn" href="fetchFlatBookingsByCard.html">Fetch Flat Bookings By Card</a>
+                <!-- <a class="menu-btn" href="fetchRoomBookingsByCard.html">Fetch Room Bookings By Card</a>
+                <a class="menu-btn" href="fetchFlatBookingsByCard.html">Fetch Flat Bookings By Card</a> -->
                 <a class="menu-btn" href="manageRooms.html">Manage Rooms</a>
                 <a class="menu-btn" href="blockRC.html">Block / Unblock RC</a>
                 <a class="menu-btn" href="roomReports.html">Room Booking Reports</a>
