--- a/admin/food/foodReports.html
+++ b/admin/food/foodReports.html
@@ -20,7 +20,7 @@
 
     <!-- API Config -->
     <script>
-      const REPORT_URL = `https://sratrc-portal-backend-dev.onrender.com/api/v1/admin//stay/reservation_report`;
+      const REPORT_URL = `${CONFIG.basePath}//stay/reservation_report`;
     </script>
 
     <!-- Styles -->
