Update admin index.html to include config.js

--- a/admin/index.html
+++ b/admin/index.html
@@ -15,14 +15,13 @@
     <script src="../../style/js/custom.js"></script>
     <script src="../../sessionstorage.js"></script>
     <script src="../index.js"></script>
+    <script src="../style/js/config.js"></script>
 
     <!-- Shared Styles -->
     <link rel="stylesheet" href="../../style/css/styles.css" />
   </head>
 
   <body>
-    
-
     <div class="middlecontent">
       <div class="container">
         <div class="whitesec">
@@ -33,7 +32,7 @@
 
             <div class="form">
               <form action="#" method="post" onsubmit="login(event)">
-                  <div class="form-group">
+                <div class="form-group">
                   <label for="username">Username:</label>
                   <input
                     type="text"
@@ -44,8 +43,8 @@
                     placeholder="Enter username"
                   />
                 </div>
-				
-				      <div class="form-group">
+
+                <div class="form-group">
                   <label for="password">Password:</label>
                   <input
                     type="password"
@@ -57,17 +56,14 @@
                   />
                 </div>
 
-                 <div class="form-group form-submit">
+                <div class="form-group form-submit">
                   <button type="submit" class="btn btn-primary">Login</button>
                 </div>
               </form>
-
             </div>
           </div>
         </div>
       </div>
     </div>
-
-
   </body>
 </html>
