--- a/admin/account/index.html
+++ b/admin/account/index.html
@@ -14,6 +14,7 @@
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
     <script src="../../sessionstorage.js"></script>
+    <script src="../../style/js/config.js"></script>
     <script src="completedTransactions.js" defer></script>
 
     <!-- Shared Styles -->
