--- a/admin/adhyayan/adhyayanReport.html
+++ b/admin/adhyayan/adhyayanReport.html
@@ -8,10 +8,7 @@
   <!-- Load jQuery first -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-  <!-- Config and Header Scripts -->
-  <!-- <script src="../../style/js/config.js"></script>
-  <script src="../../style/js/header.js"></script> -->
-
+  
   <!-- Styles -->
   <link rel="stylesheet" href="../../style/css/styles.css" />
 
@@ -20,6 +17,7 @@
   <script src="../../style/js/bootstrap-datepicker.min.js"></script>
   <script src="../../style/js/clockpicker.js"></script>
   <script src="../../style/js/custom.js"></script>
+  <script src="../../style/js/config.js"></script>
   <script src="/sessionstorage.js"></script>
   <script src="adhyayanReport.js"></script>
 </head>
