--- a/admin/adhyayan/updateAdhyayan.html
+++ b/admin/adhyayan/updateAdhyayan.html
@@ -14,6 +14,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet" />
   <!-- <link href="../../style/css/plugin.css" rel="stylesheet" /> -->
   <link href="../../style/css/clockpicker.css" rel="stylesheet" />
+  <script src="../../style/js/config.js"></script>
   <link href="../../style/css/styles.css" rel="stylesheet" />
 
   <!-- Scripts -->
