--- a/admin/card/cardDetails.html
+++ b/admin/card/cardDetails.html
@@ -129,7 +129,7 @@
         </div>
       </form>
     </div>
-
+    <script src="../../style/js/config.js"></script>
     <script src="cardDetails.js"></script>
   </body>
 </html>
