--- a/admin/food/fetchMenu.html
+++ b/admin/food/fetchMenu.html
@@ -13,6 +13,7 @@
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
+    <script src="../../style/js/config.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="fetchMenu.js"></script>
 
