--- a/admin/sudo/deleteRole.html
+++ b/admin/sudo/deleteRole.html
@@ -16,6 +16,7 @@
 <link href="../style/css/plugin.css" rel="stylesheet">
 <!-- Custom styles for this template -->
 <link href="../style/css/clockpicker.css" rel="stylesheet">
+<script src="../../style/js/config.js"></script>
 <link href="../style/css/style.css" rel="stylesheet">
 </head>
 
