--- a/admin/adminhome.html
+++ b/admin/adminhome.html
@@ -9,8 +9,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
     <!-- Config and Header Scripts -->
-    <!-- <script src="../../style/js/config.js"></script>
-    <script src="../../style/js/header.js"></script> -->
+    <script src="../../style/js/config.js"></script>
+    <!-- <script src="../../style/js/header.js"></script> -->
 
     <!-- Additional Styles and Scripts -->
     <script src="../style/js/plugin.js"></script>
