--- a/admin/food/issuedPlateReport.html
+++ b/admin/food/issuedPlateReport.html
@@ -9,16 +9,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
     <!-- Scripts -->
-    <!-- <script src="../../style/js/config.js"></script>
-    <script src="../../style/js/header.js"></script> -->
     <script src="../../style/js/plugin.js"></script>
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
+    <script src="../../style/js/config.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="issuedPlateReport.js"></script>
-    <script src="issuedPlateReport.js"></script>
-
+    
     <!-- Styles -->
     <link rel="stylesheet" href="../../style/css/styles.css" />
   </head>
