--- a/admin/gate/index.html
+++ b/admin/gate/index.html
@@ -8,15 +8,13 @@
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-    <!-- Optional Scripts (comment out if unused) -->
-    <!-- <script src="../../style/js/config.js"></script>
-    <script src="../../style/js/header.js"></script> -->
-
+    
     <!-- Additional Scripts -->
     <script src="../../style/js/plugin.js"></script>
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
+    <script src="../../style/js/config.js"></script>
     <script src="../../sessionstorage.js"></script>
     <script src="index.js"></script>
 
