--- a/admin/gate/totalSeva.html
+++ b/admin/gate/totalSeva.html
@@ -15,6 +15,7 @@
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
+    <script src="../../style/js/config.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="totalSeva.js"></script>
 
