Consolidated all reports from Adhyayan Summary Report

--- a/admin/adhyayan/adhyayanReport.html
+++ b/admin/adhyayan/adhyayanReport.html
@@ -50,6 +50,7 @@
                     <th>Swadhyay Karta</th>
                     <th>Registration Count</th>
                     <th>Max Count</th>
+                    <th>WaitList Count</th>
                     <th>Status</th>
                     <th>Action</th>
                   </tr>
