--- a/admin/travel/updateTransactionStatus.html
+++ b/admin/travel/updateTransactionStatus.html
@@ -90,7 +90,7 @@
                     <option value="payment pending">Payment Pending</option>
                     <option value="payment completed">Payment Completed</option>
                     <option value="cancelled">Cancelled</option>
-                    <option value="admin canceled">Admin Cancelled</option>
+                    <option value="admin cancelled">Admin Cancelled</option>
                     <option value="awaiting refund">Awaiting Refund</option>
                   </select>
                 </div>
