1) Added support for additional filtering in travel reports 2) Remove transaction update operation as transaction update should happen with travel update together

--- a/admin/travel/updateBookingStatus.html
+++ b/admin/travel/updateBookingStatus.html
@@ -65,7 +65,15 @@
                     <option value="pending">Payment Pending</option>
                   </select>
                 </div>
-
+                <div class="form-group">
+                  <label for="upi_ref">UPI Reference:</label>
+                  <input type="text" id="upi_ref" name="upi_ref" class="form-control" />
+                </div>
+                <div class="form-group">
+                  <label for="upi_ref">Transaction Description </label>
+                  <input type="text" id="description" name="description" class="form-control" />
+                </div>
+                
                 <div class="form-group">
                   <label for="adminComments">Admin Comments:</label>
                   <input
