--- a/admin/travel/fetchUpcomingBookings.html
+++ b/admin/travel/fetchUpcomingBookings.html
@@ -73,12 +73,9 @@
                 </div>
 
                 <div class="form-group">
-                  <label>Rides from RC:</label>
-                  <div class="checkbox-group" style="display: flex; flex-wrap: wrap; gap: 1rem;">
-                    <label><input type="checkbox" name="pickup" value="RC" /> RC </label>
-                    
-                  </div>
-                </div>
+                  <label><input type="checkbox" id="pickupRC" /> Pickup at RC</label>
+<label><input type="checkbox" id="dropRC" /> Drop at RC</label>
+</div>
                 
 
                 <div class="form-group">
