--- a/admin/travel/fetchUpcomingBookings.html
+++ b/admin/travel/fetchUpcomingBookings.html
@@ -72,11 +72,11 @@
                   </div>
                 </div>
 
-                <div class="form-group">
-                  <label><input type="checkbox" id="pickupRC" /> Pickup at RC</label>
-<label><input type="checkbox" id="dropRC" /> Drop at RC</label>
-</div>
-                
+                <div class="form-group" style="display: flex; align-items: center; gap: 2rem;">
+                  <label><input type="radio" name="rcOption" id="pickupRC" value="pickup" /> Pickup at RC</label>
+                  <label><input type="radio" name="rcOption" id="dropRC" value="drop" /> Drop at RC</label>
+                </div>
+                                
 
                 <div class="form-group">
                   <label for="start_date">*Start Date:</label>
