added location field in adhyayan

--- a/admin/adhyayan/adhyayanBookingslist.html
+++ b/admin/adhyayan/adhyayanBookingslist.html
@@ -37,7 +37,7 @@
       <div class="whitesec">
         <div class="inner-padding">
           <div class="frm-head">
-            <h1>Adhyayan Bookings <span id="shirbirName"></span></h1>
+            <h1>Adhyayan Bookings <span id="shibirName"></span></h1>
           </div>
 
           <div class="form">
