--- a/admin/adhyayan/fetchAllAdhyayan.html
+++ b/admin/adhyayan/fetchAllAdhyayan.html
@@ -47,6 +47,7 @@
                     <tr>
                       <th><center>Serial No</center></th>
                       <th><center>Adhyayan Name</center></th>
+                      <th><center>Location</center></th>
                       <th><center>Swadhyay Karta</center></th>
                       <th><center>Start Date</center></th>
                       <th><center>End Date</center></th>
