--- a/admin/adhyayan/adhyayanReport.html
+++ b/admin/adhyayan/adhyayanReport.html
@@ -47,6 +47,7 @@
                   <tr>
                     <th>Serial No</th>
                     <th>Adhyayan Name</th>
+                    <th>Location</th>
                     <th>Swadhyay Karta</th>
                     <th>Registration Count</th>
                     <th>Max Count</th>
