--- a/admin/adhyayan/updateAdhyayan.html
+++ b/admin/adhyayan/updateAdhyayan.html
@@ -49,6 +49,15 @@
                 </div>
 
                 <div class="form-group">
+                  <label for="location">Location:</label>
+                  <select id="location" name="location" class="form-control" required>
+  <option value="Parli Research Centre">Parli Research Centre</option>
+  <option value="Mokshdham Rajndangaon">Mokshdham Rajndangaon</option>
+  <option value="Kolkata Centre">Kolkata Centre</option>
+</select>
+                </div>
+
+                <div class="form-group">
                   <label for="start_date">Start Date:</label>
                   <input type="date" id="start_date" name="start_date" class="form-control" required />
                 </div>
