--- a/admin/adhyayan/adhyayanReport.html
+++ b/admin/adhyayan/adhyayanReport.html
@@ -8,7 +8,21 @@
   <!-- Load jQuery first -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-  
+  <!-- Shared Styles -->
+  <link rel="stylesheet" href="../../style/css/styles.css" />
+  <style>
+    .table-responsive {
+width: 100%;
+overflow-x: auto;
+-webkit-overflow-scrolling: touch;
+}
+
+.table {
+min-width: 1000px; /* Or adjust based on expected column count */
+width: 100%;
+}
+
+  </style>
   <!-- Styles -->
   <link rel="stylesheet" href="../../style/css/styles.css" />
 
