--- a/admin/adminhome.html
+++ b/admin/adminhome.html
@@ -47,6 +47,7 @@
                 <a class="menu-btn" href="adhyayan/index.html">Adhyayan Management</a>
                 <a class="menu-btn" href="room/index.html">Room Management</a>
                 <a class="menu-btn" href="travel/index.html">Travel Management</a>
+                <a class="menu-btn" href="maintenance/index.html">Maintenance Management</a>
               </div>
             </div>
           </div>
