--- a/admin/sudo/createAdmin.html
+++ b/admin/sudo/createAdmin.html
@@ -63,6 +63,18 @@
                   />
                 </div>
 
+                <!-- <div class="form-group">
+                  <label for="roles">Roles:</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="roles"
+                    placeholder="Enter user roles"
+                    required
+                  />
+                </div> -->
+
+
                 <div class="form-group form-submit">
                   <button type="submit" class="btn btn-primary">
                     Create Admin
