--- a/admin/account/index.html
+++ b/admin/account/index.html
@@ -1,3 +1,8 @@
+<script src="/style/js/roleCheck.js"></script>
+<script>
+  checkRoleAccess(['accountsAdmin', 'superAdmin']); // customize allowed roles per page
+</script>
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -17,21 +22,8 @@
     <script src="../../style/js/config.js"></script>
     <script src="completedTransactions.js" defer></script>
 
-    <!-- Shared Styles -->
     <link rel="stylesheet" href="../../style/css/styles.css" />
-    <style>
-      .table-responsive {
-  width: 100%;
-  overflow-x: auto;
-  -webkit-overflow-scrolling: touch;
-}
-
-.table {
-  min-width: 1000px; /* Or adjust based on expected column count */
-  width: 100%;
-}
-
-    </style>
+    
   </head>
 
   <body>
@@ -40,9 +32,9 @@
         <div class="logout">
           <a href="javascript:void(0);" onclick="history.back()">Back</a>
           &nbsp; | &nbsp;
-          <a href="/admin/">Home</a>
+          <a href="javascript:void(0);" onclick="goToHome()">Home</a>
           &nbsp; | &nbsp;
-          <a id="homelink" href="/admin/">Logout</a>
+          <a href="javascript:void(0);" onclick="logout()">Logout</a>
         </div>
       </div>
     </div>
