--- a/admin/adhyayan/adhyayanReport.html
+++ b/admin/adhyayan/adhyayanReport.html
@@ -1,3 +1,8 @@
+<script src="/style/js/roleCheck.js"></script>
+<script>
+  checkRoleAccess(['officeAdmin', 'adhyayanManagement', 'superAdmin']); // customize allowed roles per page
+</script>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -40,8 +45,8 @@ width: 100%;
     <div class="container">
       <div class="logout">
         <a href="javascript:void(0);" onclick="history.back()">Back</a>
-        &nbsp; | &nbsp; <a href="/admin/">Home</a> &nbsp; | &nbsp;
-        <a id="homelink" href="/admin/">Logout</a>
+        &nbsp; | &nbsp; <a href="javascript:void(0);" onclick="goToHome()">Home</a> &nbsp; | &nbsp;
+        <a href="javascript:void(0);" onclick="logout()">Logout</a>
       </div>
     </div>
   </div>
