--- a/admin/food/issuedPlateReport.html
+++ b/admin/food/issuedPlateReport.html
@@ -1,3 +1,8 @@
+<script src="/style/js/roleCheck.js"></script>
+<script>
+  checkRoleAccess(['foodAdmin', 'superAdmin']); // customize allowed roles per page
+</script>
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -26,8 +31,8 @@
       <div class="container">
         <div class="logout">
           <a href="javascript:void(0);" onclick="history.back()">Back</a>
-          &nbsp; | &nbsp; <a href="/admin/">Home</a> &nbsp; | &nbsp;
-          <a id="homelink" href="/admin/">Logout</a>
+          &nbsp; | &nbsp; <a href="javascript:void(0);" onclick="goToHome()">Home</a> &nbsp; | &nbsp;
+          <a href="javascript:void(0);" onclick="logout()">Logout</a>
         </div>
       </div>
     </div>
