--- a/admin/gate/index.html
+++ b/admin/gate/index.html
@@ -1,14 +1,18 @@
+<script src="/style/js/roleCheck.js"></script>
+<script>
+  checkRoleAccess(['gateAdmin', 'superAdmin']); // customize allowed roles per page
+</script>
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Total Residents Report</title>
+    <title>Gate Management</title>
 
-    <!-- jQuery -->
+    <!-- Load jQuery first -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-    
     <!-- Additional Scripts -->
     <script src="../../style/js/plugin.js"></script>
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
@@ -16,7 +20,6 @@
     <script src="../../style/js/custom.js"></script>
     <script src="../../style/js/config.js"></script>
     <script src="../../sessionstorage.js"></script>
-    <script src="index.js"></script>
 
     <!-- Shared Styles -->
     <link rel="stylesheet" href="../../style/css/styles.css" />
@@ -28,9 +31,9 @@
         <div class="logout">
           <a href="javascript:void(0);" onclick="history.back()">Back</a>
           &nbsp; | &nbsp;
-          <a href="/admin/">Home</a>
+          <a href="javascript:void(0);" onclick="goToHome()">Home</a>
           &nbsp; | &nbsp;
-          <a id="homelink" href="/admin/">Logout</a>
+          <a href="javascript:void(0);" onclick="logout()">Logout</a>
         </div>
       </div>
     </div>
@@ -40,24 +43,27 @@
         <div class="whitesec">
           <div class="inner-padding">
             <div class="frm-head">
-              <h1>Total Residents Report</h1>
+              <h1>Gate Management</h1>
             </div>
 
-            <div class="form">
-              <div class="table-responsive">
-                <table class="table table-striped table-bordered">
-                  <thead>
-                    <tr>
-                      <th>Resident Type</th>
-                      <th>Count</th>
-                    </tr>
-                  </thead>
-                  <tbody id="totalResidents">
-                    <!-- Populated by JavaScript -->
-                  </tbody>
-                </table>
+            <div class="admin-menu">
+              <div class="menu-grid">
+                <a class="menu-btn" href="gateIn.html">
+                  Gate Checkin
+                </a>
+                <a class="menu-btn" href="gateOut.html">
+                  Gate Checkout
+                </a>
+                <a class="menu-btn" href="gateReport.html">
+                    Gate Checkin/out Report
+                </a>
+                <a class="menu-btn" href="onPremise.html">
+                  Current onPremise Report
+                </a>
+                
               </div>
             </div>
+
           </div>
         </div>
       </div>
