--- a/admin/gate/totalMumukshu.html
+++ b/admin/gate/totalMumukshu.html
@@ -1,3 +1,8 @@
+<script src="/style/js/roleCheck.js"></script>
+<script>
+  checkRoleAccess(['gateAdmin', 'superAdmin']); // customize allowed roles per page
+</script>
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -27,9 +32,9 @@
         <div class="logout">
           <a href="javascript:void(0);" onclick="history.back()">Back</a>
           &nbsp; | &nbsp;
-          <a href="/admin/">Home</a>
+          <a href="javascript:void(0);" onclick="goToHome()">Home</a>
           &nbsp; | &nbsp;
-          <a id="homelink" href="/admin/">Logout</a>
+          <a href="javascript:void(0);" onclick="logout()">Logout</a>
         </div>
       </div>
     </div>
