--- a/admin/maintenance/updateRequest.html
+++ b/admin/maintenance/updateRequest.html
@@ -1,3 +1,8 @@
+<script src="/style/js/roleCheck.js"></script>
+<script>
+  checkRoleAccess(['maintenanceAdmin', 'electricalAdmin' , 'housekeepingAdmin' , 'superAdmin']); // customize allowed roles per page
+</script>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
