--- a/admin/office_index.html
+++ b/admin/office_index.html
@@ -1,6 +1,6 @@
 <script src="/style/js/roleCheck.js"></script>
 <script>
-  checkRoleAccess(['gateAdmin', 'superAdmin']); // customize allowed roles per page
+  checkRoleAccess(['officeAdmin', 'superAdmin']); // customize allowed roles per page
 </script>
 
 <!DOCTYPE html>
@@ -8,9 +8,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PR Residents Report</title>
+    <title>Adhyayan Management</title>
 
-    <!-- jQuery -->
+    <!-- Load jQuery first -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
     <!-- Additional Scripts -->
@@ -20,7 +20,6 @@
     <script src="../../style/js/custom.js"></script>
     <script src="../../style/js/config.js"></script>
     <script src="../../sessionstorage.js"></script>
-    <script src="totalPR.js"></script>
 
     <!-- Shared Styles -->
     <link rel="stylesheet" href="../../style/css/styles.css" />
@@ -44,29 +43,17 @@
         <div class="whitesec">
           <div class="inner-padding">
             <div class="frm-head">
-              <h1>PR Residents Report</h1>
+              <h1>Adhyayan Management</h1>
             </div>
 
-            <div class="form">
-              <div class="table-responsive">
-                <table
-                  id="prResidentsTable"
-                  class="table table-striped table-bordered"
-                >
-                  <thead>
-                    <tr>
-                      <th>Card No</th>
-                      <th>Issued To</th>
-                      <th>Mobile No</th>
-                    </tr>
-                  </thead>
-                  <tbody id="prResidents">
-                    <!-- Data populated by JavaScript -->
-                  </tbody>
-                </table>
-              </div>
+            <div class="admin-menu">
+              <div class="menu-grid">
+                <a class="menu-btn" href="adhyayan/index.html"> Adhyayan Management </a>
+                <a class="menu-btn" href="card/index.html">Card Management</a>
+                <a class="menu-btn" href="room/index.html">Room Management</a>
+                </div>
             </div>
-
+            
           </div>
         </div>
       </div>
