--- a/admin/sudo/createAdmin.html
+++ b/admin/sudo/createAdmin.html
@@ -1,3 +1,8 @@
+<script src="/style/js/roleCheck.js"></script>
+<script>
+  checkRoleAccess(['superAdmin']); // customize allowed roles per page
+</script>
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -26,8 +31,8 @@
       <div class="container">
         <div class="logout">
           <a href="javascript:void(0);" onclick="history.back()">Back</a>
-          &nbsp; | &nbsp; <a href="/admin/">Home</a> &nbsp; | &nbsp;
-          <a id="homelink" href="/admin/">Logout</a>
+          &nbsp; | &nbsp; <a href="javascript:void(0);" onclick="goToHome()">Home</a> &nbsp; | &nbsp;
+          <a href="javascript:void(0);" onclick="logout()">Logout</a>
         </div>
       </div>
     </div>
@@ -63,7 +68,8 @@
                   />
                 </div>
 
-                <!-- <div class="form-group">
+                
+                <div class="form-group">
                   <label for="roles">Roles:</label>
                   <input
                     type="text"
@@ -72,7 +78,7 @@
                     placeholder="Enter user roles"
                     required
                   />
-                </div> -->
+                </div>
 
 
                 <div class="form-group form-submit">
