--- a/admin/sudo/deleteRole.html
+++ b/admin/sudo/deleteRole.html
@@ -1,3 +1,8 @@
+<script src="/style/js/roleCheck.js"></script>
+<script>
+  checkRoleAccess(['superAdmin']); // customize allowed roles per page
+</script>
+
 <!--index--> 
 <!DOCTYPE html>
 <html lang="en">
