--- a/admin/utsav/index.html
+++ b/admin/utsav/index.html
@@ -1,16 +1,17 @@
 <script src="/style/js/roleCheck.js"></script>
 <script>
-  checkRoleAccess(['maintenanceAdmin', 'superAdmin']); // customize allowed roles per page
+  checkRoleAccess(['utsavAdmin', 'superAdmin']); // customize allowed roles per page
 </script>
+
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maintenance Requests</title>
+    <title>Utsav Management</title>
 
-    <!-- jQuery -->
+    <!-- Load jQuery first -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
     <!-- Additional Scripts -->
@@ -18,25 +19,11 @@
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
-    <script src="../../sessionstorage.js"></script>
     <script src="../../style/js/config.js"></script>
-    <script src="fetchMaintenance.js" defer></script>
+    <script src="../../sessionstorage.js"></script>
 
     <!-- Shared Styles -->
     <link rel="stylesheet" href="../../style/css/styles.css" />
-    <style>
-      .table-responsive {
-  width: 100%;
-  overflow-x: auto;
-  -webkit-overflow-scrolling: touch;
-}
-
-.table {
-  min-width: 1000px; /* Or adjust based on expected column count */
-  width: 100%;
-}
-
-    </style>
   </head>
 
   <body>
@@ -57,38 +44,19 @@
         <div class="whitesec">
           <div class="inner-padding">
             <div class="frm-head">
-              <h1>All Maintenance Requests</h1>
+              <h1>Utsav Management</h1>
             </div>
 
-            <div class="form">
-              <div class="table-responsive">
-                <table id="maintenanceTable" class="table table-striped table-bordered">
-                  <thead>
-                    <tr>
-                      <th>Booking Id</th>
-                      <th>Requested By</th>
-                      <th>Issued to</th>
-                      <th>Mobile</th>
-                      <th>Created At</th>
-                      <th>Department</th>
-                      <th>Work Detail</th>
-                      <th>Area of Work</th>
-                      <th>Comments</th>
-                      <th>Status</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td colspan="10">Loading...</td>
-                    </tr>
-                  </tbody>
-                </table>
+            <div class="admin-menu">
+              <div class="menu-grid">
+                Coming Soon
+                
               </div>
             </div>
+
           </div>
         </div>
       </div>
     </div>
-
   </body>
 </html>
