use a single page for all types of maintenance requests

--- a/admin/maintenance/maintenance.html
+++ b/admin/maintenance/maintenance.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Housekeeping Requests</title>
+    <title>Maintenance Requests</title>
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -15,7 +15,7 @@
     <script src="../../style/js/custom.js"></script>
     <script src="../../sessionstorage.js"></script>
     <script src="../../style/js/config.js"></script>
-    <script src="fetchHousekeeping.js" defer></script>
+    <script src="maintenance.js" defer></script>
 
     <!-- Shared Styles -->
     <link rel="stylesheet" href="../../style/css/styles.css" />
@@ -52,12 +52,12 @@
         <div class="whitesec">
           <div class="inner-padding">
             <div class="frm-head">
-              <h1>All Housekeeping Requests</h1>
+              <h1>All Maintenance Requests</h1>
             </div>
 
             <div class="form">
               <div class="table-responsive">
-                <table id="housekeepingTable" class="table table-striped table-bordered">
+                <table id="maintenanceTable" class="table table-striped table-bordered">
                   <thead>
                     <tr>
                       <th>Booking Id</th>
