--- a/admin/maintenance/maintenance.html
+++ b/admin/maintenance/maintenance.html
@@ -60,14 +60,12 @@
                 <table id="maintenanceTable" class="table table-striped table-bordered">
                   <thead>
                     <tr>
-                      <th>Booking Id</th>
                       <th>Requested By</th>
-                      <th>Issued to</th>
-                      <th>Mobile</th>
+                      <th>Mobile No.</th>
                       <th>Created At</th>
                       <th>Department</th>
-                      <th>Work Detail</th>
                       <th>Area of Work</th>
+                      <th>Work Detail</th>
                       <th>Comments</th>
                       <th>Status</th>
                     </tr>
