--- a/admin/travel/updateBookingStatus.html
+++ b/admin/travel/updateBookingStatus.html
@@ -67,8 +67,14 @@
                     <option value="admin cancelled">Admin Cancelled</option>
                     <option value="cancelled">Cancelled</option>
                     <option value="waiting">Waiting</option>
-                    <option value="pending">Payment Pending</option>
+                    <option value="awaiting confirmation">Awaiting Confirmation</option>
+                    <option value="proceed for payment">Proceed for Payment</option>
                   </select>
+                </div>
+                
+                <div class="form-group">
+                  <label for="charges">Charges:</label>
+                  <input type="number" id="charges" name="charges" class="form-control" disabled/>
                 </div>
                 <div class="form-group">
                   <label for="upi_ref">UPI Reference:</label>
