incomplete utsav package

--- a/admin/utsav/createPackage.html
+++ b/admin/utsav/createPackage.html
@@ -1,6 +1,6 @@
 <script src="/style/js/roleCheck.js"></script>
 <script>
-  checkRoleAccess(['utsavAdmin', 'superAdmin']); // customize allowed roles per page
+  checkRoleAccess(['utsavManagement', 'superAdmin']); // customize allowed roles per page
 </script>
 
 <!DOCTYPE html>
@@ -8,7 +8,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Upcoming Utsavs</title>
+    <title>Create Utsav Package</title>
 
     <!-- Load jQuery first -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -20,7 +20,7 @@
     <script src="../../style/js/custom.js"></script>
     <script src="../../style/js/config.js"></script>
     <script src="/sessionstorage.js"></script>
-    <script src="fetchAllUtsav.js"></script>
+    <script src="createPackage.js"></script>
 
     <!-- Styles -->
     <link rel="stylesheet" href="../../style/css/styles.css" />
@@ -41,31 +41,47 @@
       <div class="container">
         <div class="whitesec">
           <div class="inner-padding">
+
             <div class="frm-head">
-              <h1>Upcoming Utsavs</h1>
+              <h1>Create Utsav Package</h1>
             </div>
 
             <div class="form">
-              <div class="table-responsive">
-                <table id="utsavList" class="table table-striped table-bordered">
-                  <thead>
-                    <tr>
-                      <th><center>Serial No</center></th>
-                      <th><center>Utsav Name</center></th>
-                      <th><center>Start Date</center></th>
-                      <th><center>End Date</center></th>
-                      <th><center>Max Count</center></th>
-                      <th><center>Status</center></th>
-                      <th><center>Action</center></th>
-                      <th><center>Add Package</center></th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <!-- Rows will be populated dynamically using JavaScript -->
-                  </tbody>
-                </table>
-              </div>
-            </div>
+              <div id="alert" class="alert" role="alert" style="display: none;"></div>
+
+              <form id="utsavPackageForm">
+  <!-- Display Utsav Name (Read-Only) -->
+  <div class="form-group">
+    <label for="utsav_name">Utsav Name:</label>
+    <input type="text" id="utsav_name" name="utsav_name" class="form-control" readonly />
+  </div>
+
+  <!-- Package Name (Editable) -->
+  <div class="form-group">
+    <label for="packageName">Package Name:</label>
+    <input type="text" id="packageName" name="packageName" class="form-control" required />
+  </div>
+
+  <div class="form-group">
+    <label for="start_date">Start Date:</label>
+    <input type="date" id="start_date" name="start_date" class="form-control" required />
+  </div>
+
+  <div class="form-group">
+    <label for="end_date">End Date:</label>
+    <input type="date" id="end_date" name="end_date" class="form-control" required />
+  </div>
+
+  <div class="form-group">
+    <label for="amount">Amount:</label>
+    <input type="number" id="amount" name="amount" class="form-control" required />
+  </div>
+
+  <div class="form-group form-submit">
+    <button type="submit" class="btn btn-primary">Create Utsav Package</button>
+  </div>
+</form>
+</div>
 
           </div>
         </div>
