--- a/admin/utsav/index.html
+++ b/admin/utsav/index.html
@@ -53,6 +53,8 @@
                 <a class="menu-btn" href="fetchAllUtsav.html">Edit Existing Utsav</a>
                 <a class="menu-btn" href="utsavReport.html">Utsav Summary Report</a>
                 <a class="menu-btn" href="utsavStatusUpdate.html">Utsav Status Update</a>
+                <a class="menu-btn" href="createPackage.html">Add New Utsav Package</a>
+                
               </div>
             </div>
 
