date format changed to DD-MM-YYYY

--- a/admin/room/fetchFlatBookingsByCard.html
+++ b/admin/room/fetchFlatBookingsByCard.html
@@ -21,6 +21,7 @@
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
     <script src="../../style/js/config.js"></script>
+    <script src="../../style/js/formatDate.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="fetchFlatBookingsByCard.js"></script>
 
