--- a/admin/food/fetchMenu.html
+++ b/admin/food/fetchMenu.html
@@ -20,6 +20,8 @@
     <script src="../../style/js/custom.js"></script>
     <script src="../../style/js/config.js"></script>
     <script src="/sessionstorage.js"></script>
+    <script src="/style/js/utils.js"></script>
+    <script src="../../style/js/formatDate.js"></script>
     <script src="fetchMenu.js"></script>
 
     <!-- Styles -->
