--- a/admin/utsav/updatePackage.html
+++ b/admin/utsav/updatePackage.html
@@ -9,10 +9,9 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <!-- <link rel="icon" href="logo.png" /> -->
-  <title>Edit Utsav</title>
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <title>Edit Utsav Package</title>
 
   <!-- Fonts and Styles -->
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet" />
@@ -21,8 +20,6 @@
   <link href="../../style/css/clockpicker.css" rel="stylesheet" />
   <script src="../../style/js/config.js"></script>
   <link href="../../style/css/styles.css" rel="stylesheet" />
-
-  
 </head>
 <body>
   <div class="fullheight" style="background:url(../../style/images/RC_Blur.png) no-repeat center center; background-size: cover;">
@@ -41,11 +38,11 @@
         <div class="whitesec">
           <div class="inner-padding">
             <div class="frm-head">
-              <h1>Edit Utsav</h1>
+              <h1>Edit Utsav Package</h1>
             </div>
 
             <div class="form">
-              <form id="editUtsavForm">
+              <form id="editPackageForm">
                 <input type="hidden" id="id" name="id" />
 
                 <div class="form-group">
@@ -64,14 +61,8 @@
                 </div>
 
                 <div class="form-group">
-                  <label for="total_seats">Total Seats:</label>
-                  <input type="number" id="total_seats" name="total_seats" class="form-control" required />
-                </div>
-
-                
-                <div class="form-group">
-                  <label for="comments">Comments:</label>
-                  <textarea id="comments" name="comments" rows="4" class="form-control"></textarea>
+                  <label for="amount">Amount:</label>
+                  <input type="number" id="amount" name="amount" step="0.01" class="form-control" required />
                 </div>
 
                 <div class="form-group form-submit">
@@ -84,8 +75,6 @@
         </div>
       </div>
     </div>
-
-   
   </div>
 
   <!-- Scripts -->
@@ -94,7 +83,7 @@
   <script src="../../style/js/bootstrap-datepicker.min.js"></script>
   <script src="../../style/js/clockpicker.js"></script>
   <script src="../../style/js/custom.js"></script>
-  <script src="updateUtsav.js"></script>
+  <script src="updatePackage.js"></script> <!-- Your JS for update logic -->
   <script src="/sessionstorage.js"></script>
 </body>
 </html>
