accounts management changes

--- a/admin/account/index.html
+++ b/admin/account/index.html
@@ -48,11 +48,14 @@
 
             <div class="admin-menu">
               <div class="menu-grid">
-                <a class="menu-btn" href="voucherCreation.html">Details for Voucher Creation</a>
+                <a class="menu-btn" href="voucherCreation.html">Completed Transaction Report</a>
+                <a class="menu-btn" href="pendingTransaction.html">Pending Transaction Report</a>
+                <a class="menu-btn" href="creditTransaction.html">Credited Transaction Report</a>
                 <a class="menu-btn" href="settlementReport.html">Settlement Report</a>
                 <a class="menu-btn" href="settlementRecon.html">Settlement Reconciliation</a>
                 <a class="menu-btn" href="settlementBreakdown.html">Settlement BreakDown Report </a>
-                </div>
+                <a class="menu-btn" href="creditsReport.html">Mumukshu Credits Report </a>
+              </div>
             </div>
             
           </div>
