--- a/admin/utsav/utsavStatusUpdate.html
+++ b/admin/utsav/utsavStatusUpdate.html
@@ -63,7 +63,7 @@
                   <label for="status">Status:</label>
                   <select id="status" name="status" class="form-control" required>
                     <option value="confirmed">Confirmed</option>
-                    <option value="cancelled">Cancelled</option>
+                    <option value="admin cancelled">Cancelled</option>
                     <option value="pending">Payment Pending</option>
                     <option value="waiting">Waiting</option>
                   </select>
