--- a/admin/room/manageRooms.html
+++ b/admin/room/manageRooms.html
@@ -67,11 +67,11 @@
                 </table>
               </div>
 
-              <div class="form-group form-submit mt-3">
+              <!-- <div class="form-group form-submit mt-3">
                 <button onclick="window.location.href='addRoom.html'" class="btn btn-secondary">
                   Add New Room
                 </button>
-              </div>
+              </div> -->
 
             </div>
 
