--- a/admin/adhyayan/updateAdhyayan.html
+++ b/admin/adhyayan/updateAdhyayan.html
@@ -56,9 +56,9 @@
                 <div class="form-group">
                   <label for="location">Location:</label>
                   <select id="location" name="location" class="form-control" required>
-  <option value="Parli Research Centre">Parli Research Centre</option>
-  <option value="Mokshdham Rajndangaon">Mokshdham Rajndangaon</option>
-  <option value="Kolkata Centre">Kolkata Centre</option>
+  <option value="Research Centre">Parli Research Centre</option>
+  <option value="Rajndangaon">Mokshdham Rajndangaon</option>
+  <option value="Kolkata">Kolkata Centre</option>
 </select>
                 </div>
 
