--- a/admin/room/dailyGuestCountReport.html
+++ b/admin/room/dailyGuestCountReport.html
@@ -23,6 +23,9 @@
     <script src="../../style/js/formatDate.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="dailyGuestCountReport.js"></script>
+    <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
+    <script src="../../style/js/exportToExcel.js"></script>
+
 
     <!-- Styles -->
     <link rel="stylesheet" href="../../style/css/styles.css" />
@@ -87,6 +90,7 @@
                   <!-- Table rows will be dynamically added here -->
                 </tbody>
               </table>
+              <div id="downloadBtnContainer"></div>
             </div>
 
           </div>
