--- a/admin/room/roomReports.html
+++ b/admin/room/roomReports.html
@@ -22,6 +22,9 @@
     <script src="../../style/js/formatDate.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="roomReports.js"></script>
+    <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
+    <script src="../../style/js/exportToExcel.js"></script>
+
 
     <!-- Styles -->
     <link rel="stylesheet" href="../../style/css/styles.css" />
@@ -87,6 +90,7 @@
                 <div class="form-group form-submit">
                   <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
+                <div id="downloadBtnContainer"></div>
               </form>
             </div>
 
@@ -113,6 +117,7 @@
                   <!-- Table rows will be dynamically added here -->
                 </tbody>
               </table>
+              
             </div>
 
           </div>
