--- a/admin/utsav/utsavReport.html
+++ b/admin/utsav/utsavReport.html
@@ -1,3 +1,4 @@
+
 <script src="/style/js/roleCheck.js"></script>
 <script>
   checkRoleAccess(['utsavAdmin', 'superAdmin']); // customize allowed roles per page
@@ -39,6 +40,8 @@ width: 100%;
   <script src="../../style/js/config.js"></script>
   <script src="/sessionstorage.js"></script>
   <script src="utsavReport.js"></script>
+  <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
+  <script src="../../style/js/exportToExcel.js"></script>
 </head>
 <body>
   <div class="header">
@@ -66,7 +69,8 @@ width: 100%;
                   <tr>
                     <th>Serial No</th>
                     <th>Utsav Name</th>
-                    <th>Registration Count</th>
+                    <th>Confirmed Count</th>
+                    <th>Pending Count</th>
                     <th>Max Count</th>
                     <th>WaitList Count</th>
                     <th>Status</th>
@@ -77,6 +81,7 @@ width: 100%;
                   <!-- Data will be populated dynamically by JavaScript -->
                 </tbody>
               </table>
+              <div id="downloadBtnContainer"></div>
             </div>
           </div>
 
