--- a/admin/travel/index.html
+++ b/admin/travel/index.html
@@ -51,10 +51,10 @@
                 <a class="menu-btn" href="fetchUpcomingBookings.html">
                   Fetch Upcoming Bookings
                 </a>
-                <a class="menu-btn" href="updateBookingStatus.html">
+                <!-- <a class="menu-btn" href="updateBookingStatus.html">
                   Update Booking Status
                 </a>
-                
+                 -->
               </div>
             </div>
 
