--- a/admin/travel/fetchUpcomingBookings.html
+++ b/admin/travel/fetchUpcomingBookings.html
@@ -148,5 +148,78 @@
         </div>
       </div>
     </div>
+
+    <!-- Scrollable Modal for Updating Booking Status -->
+<div id="updateModal" class="modal" style="
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.6);
+  z-index: 9999;
+  overflow: auto;
+">
+  <div class="modal-content" style="
+    background: white;
+    padding: 2rem;
+    margin: 5% auto;
+    width: 90%;
+    max-width: 600px;
+    position: relative;
+    border-radius: 10px;
+  ">
+    <span id="closeModal" style="
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      font-size: 24px;
+      cursor: pointer;
+    ">&times;</span>
+
+    <h2>Update Booking Status</h2>
+    <form id="updateBookingForm">
+      <div class="form-group">
+        <label for="bookingid">Booking ID:</label>
+        <input type="text" id="bookingid" name="bookingid" class="form-control" readonly />
+      </div>
+
+      <div class="form-group">
+        <label for="status">New Status:</label>
+        <select id="status" name="status" class="form-control" required>
+          <option value="">Select Status</option>
+          <option value="confirmed">Confirmed</option>
+          <option value="proceed for payment">Proceed for Payment</option>
+          <option value="awaiting confirmation">Awaiting Confirmation for Payment</option>
+          <option value="admin cancelled">Cancelled as wrong form filled</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label for="charges">Charges:</label>
+        <input type="number" id="charges" name="charges" class="form-control" />
+      </div>
+
+      <div class="form-group">
+        <label for="description">Transaction Description:</label>
+        <input type="text" id="description" name="description" class="form-control" />
+      </div>
+
+      <div class="form-group">
+        <label for="adminComments">Admin Comments:</label>
+        <input type="text" id="adminComments" name="adminComments" class="form-control" />
+      </div>
+
+      <div class="form-group form-submit">
+        <button type="submit" class="btn btn-primary">Update Status</button>
+        <button type="button" id="cancelUpdate" class="btn btn-secondary">Cancel</button>
+      </div>
+
+      <p id="statusMessage" style="margin-top:10px;"></p>
+    </form>
+  </div>
+</div>
+
   </body>
 </html>
